<?xml version="1.0" encoding="UTF-8"?>
<project 
    xmlns="http://maven.apache.org/POM/4.0.0" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
    xsi:schemaLocation="
        http://maven.apache.org/POM/4.0.0 
        http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dev-educery</groupId>
    <artifactId>contacts-lab</artifactId>
    <version>2021</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>educery-utils</module>
        <module>educery-storage</module>
        <module>contacts-domain</module>
        <module>contacts-storage</module>
        <module>contacts-service</module>
        <module>contacts-manager</module>
        <module>contacts-boot</module>
    </modules>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy.MMdd.HHmm</maven.build.timestamp.format>
        <build.timestamp>${maven.build.timestamp}</build.timestamp>

        <run-headless>-Djava.awt.headless=true</run-headless>
        <memory-args>-Xmx1024m -Xms1024m</memory-args>
        <compiler-args></compiler-args> <!-- default = none, see profile for 21 below -->
        <no-path-check>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</no-path-check>
        <test-args>${memory-args} ${no-path-check} ${run-headless}</test-args>
        <version.maven.compiler>3.11.0</version.maven.compiler>
        <version.maven-resources>3.3.1</version.maven-resources>

        <version.jaxb-api>2.3.0</version.jaxb-api>
        <version.jaxrs-json>2.9.8</version.jaxrs-json>
        <!-- note coupling between lib versions -->

        <version.spring-boot>2.6.15</version.spring-boot>
        <version.spring-data>2.5.10</version.spring-data>
        <version.spring-cloud>3.1.7</version.spring-cloud>
        <version.spring-context>5.3.27</version.spring-context>
        <version.enunciate>2.14.0</version.enunciate>
        <version.hibernate>5.6.5.Final</version.hibernate>
        <version.apache-cxf>3.5.5</version.apache-cxf>
        <version.slf4j>1.7.30</version.slf4j>
        <version.log4j>2.20.0</version.log4j>
        <version.crypto>1.78.1</version.crypto>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev-educery</groupId>
                <artifactId>contacts-service</artifactId>
                <version>2021.1001.1001</version>
            </dependency>
            <dependency>
                <groupId>dev-educery</groupId>
                <artifactId>contacts-domain</artifactId>
                <version>2021.1001.1001</version>
            </dependency>
            <dependency>
                <groupId>dev-educery</groupId>
                <artifactId>contacts-storage</artifactId>
                <version>2021.1001.1001</version>
            </dependency>
            <dependency>
                <groupId>dev-educery</groupId>
                <artifactId>educery-storage</artifactId>
                <version>2021.1001.1001</version>
            </dependency>
            <dependency>
                <groupId>dev-educery</groupId>
                <artifactId>educery-utils</artifactId>
                <version>2021.1001.1001</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${version.spring-context}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-jpa</artifactId>
                <version>${version.spring-data}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.spring-boot}</version>
                <scope>import</scope>
                <type>pom</type>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-bom</artifactId>
                <version>${version.apache-cxf}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.glassfish.web</groupId>
                <artifactId>javax.el</artifactId>
                <version>2.2.5</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>5.4.3.Final</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.fasterxml</groupId>
                        <artifactId>classmate</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${version.hibernate}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.jboss.logging</groupId>
                        <artifactId>jboss-logging</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.glassfish.jaxb</groupId>
                        <artifactId>jaxb-runtime</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-entitymanager</artifactId>
                <version>${version.hibernate}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.jboss.logging</groupId>
                        <artifactId>jboss-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>[2.1.210,]</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>[42.2.25,]</version>
            </dependency>

            <dependency>
                <groupId>com.webcohesion.enunciate</groupId>
                <artifactId>enunciate-core-annotations</artifactId>
                <version>${version.enunciate}</version>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${version.jaxb-api}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${version.jaxb-api}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.jaxrs</groupId>
                <artifactId>jackson-jaxrs-json-provider</artifactId>
                <version>${version.jaxrs-json}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.12.0</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.15</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.11.0</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>1.3.1</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${version.log4j}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>2.0.1.Final</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${version.crypto}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
  
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.maven.compiler}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${version.maven-resources}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>${compiler-args}</compilerArgs>
                </configuration>
           </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java-1.8</id>
            <activation>
                <jdk>1.8</jdk>
            </activation>
            <properties>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
            </properties>
        </profile>
        <profile>
            <id>java-9-10-support-1.8</id>
            <activation>
                <jdk>[9,11)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
                <maven.compiler.release>8</maven.compiler.release>
            </properties>
        </profile>
        <profile>
            <id>java-11-16-support-11</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>[11,17)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>11</maven.compiler.source>
                <maven.compiler.target>11</maven.compiler.target>
                <maven.compiler.release>11</maven.compiler.release>
            </properties>
        </profile>
        <profile>
            <id>java-17-plus</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>[17,21)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>11</maven.compiler.source>
                <maven.compiler.target>17</maven.compiler.target>
                <maven.compiler.release>17</maven.compiler.release>
                <version.enunciate>2.15.0</version.enunciate>
            </properties>
        </profile>
        <profile>
            <id>java-21-plus</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>[21,)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>11</maven.compiler.source>
                <maven.compiler.target>21</maven.compiler.target>
                <maven.compiler.release>21</maven.compiler.release>
                <version.enunciate>2.15.0</version.enunciate>
                <version.spring-boot>3.1.4</version.spring-boot>
                <compiler-args>-proc:full</compiler-args>
            </properties>
        </profile>
    </profiles>
</project>
